--- a/wp-content/themes/courswp/style.css
+++ b/wp-content/themes/courswp/style.css
@@ -7,7 +7,7 @@ Description: Ceci est le thème de test pour le cours de DW.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: a_changer
+Text Domain: cw
 Tags: portfolio, personal, coucou
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
